maybe column alignment issues are fixed?

--- a/hydrotable/static/hydrotable/css/demo_table.css
+++ b/hydrotable/static/hydrotable/css/demo_table.css
@@ -105,7 +105,7 @@
 }
 
 .DTFC_ScrollWrapper *{
-  box-sizing: content-box;
+  //box-sizing: content-box;
 }
 
 #datatable_wrapper table{
